--- a/src/options/options.html
+++ b/src/options/options.html
@@ -17,7 +17,7 @@
                 They are kept and used by openai according to
                 their <a href="https://openai.com/policies/api-data-usage-policies"
                          target="_blank">api-documentation</a> and <a href="https://openai.com/policies/privacy-policy"
-                                                                      target="_blank">privicy policy</a>.<br> This is
+                                                                      target="_blank">privacy policy</a>.<br> This is
                 less secure than the end-to-end encryption that <a
                         href="https://faq.whatsapp.com/820124435853543/?helpref=uf_share"
                         target="_blank">whatsapp(tm) uses</a>.<br></p>
