tone of voice variable

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -56,6 +56,16 @@
             </div>
         </div>
     </fieldset>
+
+    <fieldset>
+        <legend>Tone of Voice:</legend>
+        <div>
+            <label for="tone-of-voice">This is only the tone of voice you want to use, it will be inserted into the
+                prompt:</label>
+            <textarea id="tone-of-voice" name="tone-of-voice" rows="4" style="width: 100%;"></textarea>
+        </div>
+    </fieldset>
+
     <button type="submit">Save</button>
     <div class="toast" style="display:none">
         <p>Options saved successfully!</p>
