better error handling when not on free account

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -49,8 +49,12 @@
                     <label for="api-key">API Key:</label>
                     <div class="input-with-link">
                         <input type="password" id="api-key" name="api-key" required>
+                        <div>
                         <a href="https://platform.openai.com/account/api-keys"
-                           target="_blank" id="api-key-link">Get it here</a>
+                           target="_blank" id="api-key-link">Get it here</a><br>
+                            <a href="https://platform.openai.com/account/billing/overview"
+                               target="_blank" id="credit-link">and add credits here</a>
+                        </div>
                     </div>
                 </div>
             </div>
